2009-01-24  Philip Withnall  <philip@tecnocode.co.uk>

	* admin-tool/lockdown/maindialog.py: Make a string a little clearer.
	* lib/userdb.py: Fix a typo in a string. (Closes: #528253)

2009-01-12  Federico Mena Quintero  <federico@novell.com>

	* lib/config.py.in (DIRECTORIES_TO_IGNORE): Add .pulse to the
	directories to ignore.

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: remove old intltool cruft
	* configure.ac: require intltool 0.40.0

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.22.2.

==================== 2.22.1 ====================

2008-09-23  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.ac: version 2.22.1

2008-06-25  Michael Meeks  <michael.meeks@novell.com>

	* admin-tool/Makefile.am, admin-tool/sabayon-xinitrc.sh.in:
	don't spawn a whole python process / bootstrap to check for
	a single file - when we can do that in the shell script
	wrapper for free: hugely improves login performance with
	sabayon running.

==================== 2.20.0 ====================

2008-03-11  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bump version number to 2.22.0.

	* NEWS: Updated.

2008-03-06  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon.desktop.in.in: Moved from sabayon.desktop.in
	so we can do both of 1) substituting @PACKAGE_VERSION@, and 2)
	running this through INTLTOOL_DESKTOP_RULE.

	* configure.ac (AC_CONFIG_FILES): admin-tool/sabayon.desktop.in is a
	generated file now.

2008-02-21  John Robeson  <johnny@localmomentum.net>

    * lib/test-debug-conf.py: updated the test

2008-02-21  Sayamindu Dasgupta	<sayamindu@gmail.com>

	* lib/storage.py (zip_directory): Fix recursive behaviour;
	Now only single instances of files are added, and ignored 
	files and directories are filtered out.
	Fixes bgo #476761

2008-02-18  Sayamindu Dasgupta  <sayamindu@gmail.com>

	* lib/util.py: Make it work; import fnmatch.
