@@ -31,7 +31,7 @@ AM_CHECK_PYTHON_HEADERS(,[AC_MSG_ERROR([Can't locate python headers])])
 # Check for GDK/X11 and PyGObject
 PKG_CHECK_MODULES(XLIB_MODULE, gdk-x11-2.0 pygobject-2.0)
 
-PYGOBJECT_REQUIRED_VERSION=2.12.0
+PYGOBJECT_REQUIRED_VERSION=2.15.0
 AC_MSG_CHECKING(for pygobject $PYGOBJECT_REQUIRED_VERSION or greater)
 if $PKG_CONFIG --atleast-version $PYGOBJECT_REQUIRED_VERSION pygobject-2.0
 then
