@@ -1,3 +1,9 @@
+2009-02-05  Andre Klapper  <a9016009@gmx.de>
+
+	* configure.ac:
+	* lib/dirmonitor.py:
+	Port to GIO. Patch by Evan Briones. Fixes bug #527541.
+
 2009-01-24  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* admin-tool/lockdown/maindialog.py: Make a string a little clearer.
